--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,69 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+main {
+  min-height: 80vh;
+  border: 2inch;
+
+
+}
+
+.image-container {
+  width: 70%;
+  margin-top: 10px;
+  padding: 10px;
+  padding: 30px;
+}
+
+.image-background {}
+
+.h3-title {
+  margin-top: 10px;
+}
+
+.btn-ticket{
+  color: red;
+}
+
+.p-description {
+  margin-top: 30px;
+}
+
+.div-host {
+  margin-top: 30px;
+}
+
+.span-host {
+  color: blue;
+  margin-left: 10px;
+}
+
+.p-rating {
+  margin-top: 30px;
+}
+
+.h4-sub {
+  margin-top: 30px;
+}
+
+.div-date {
+  border-right: 2px solid darkgray;
+}
+
+.span-date-loc {
+  margin-left: 10px;
+  font-size: large;
+}
+
+.span-time {
+  margin-left: 10px;
+}
+
+.div-location {
+  margin-left: 40px;
+}
+
+.span-location {
+  margin-top: 30px;
+}
