--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@ main {
 
 
 }
-
+/***  --------------------------- Program Details ----------------------  ***/
 .image-container {
   width: 70%;
   margin-top: 10px;
