Search component fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,6 +78,11 @@ main {
   margin-top: 30px;
 }
 
+.search-form {
+  display: flex;
+
+}
+
 /* .visually-hidden {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
